--- a/task0001/1.7/css/main.css
+++ b/task0001/1.7/css/main.css
@@ -12,6 +12,12 @@ a {
     color: white;
 }
 
+.context {
+    width: 1180px;
+    margin: 0 auto;
+    z-index: 0;
+}
+
 /* 头部导航栏 */
 .header {
     width: 100%;
@@ -21,7 +27,7 @@ a {
 }
 
 .header .headMain {
-    width: 960px;
+    width: 980px;
     height: 75px;
     margin-left: auto;
     margin-right: auto;
@@ -51,7 +57,7 @@ a {
 .header .logoImg {
     float: right;
     margin-top: -34px;
-    margin-right: 200px;
+    margin-right: 10px;
 }
 
 /* 页脚导航 */
@@ -81,7 +87,7 @@ a {
 }
 
 .footer .footerMain {
-    width: 960px;
+    width: 980px;
     margin: 50px auto 0;
     font-size: 13px;
     overflow: hidden;
@@ -101,4 +107,260 @@ a {
 
 .footer .copyRight .footLogoImg {
     margin-bottom: -5px;
+}
+
+/* index.html */
+.indexContext img {
+    width: 1180px;
+}
+
+.indexContext .desc {
+    width: 980px;
+    height: 200px;
+    margin: -210px auto 0;
+    color: white;
+    position: relative;
+}
+
+.indexContext .desc .aticle {
+    width: 360px;
+    padding: 10px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background-image: linear-gradient(
+                        to bottom,   
+                        rgba(255, 255, 255, 0.5) 0%,     
+                        rgba(255, 255, 255, 0.3) 75%,   
+                        rgba(255, 255, 255, 0) 100%
+                        );  
+}
+
+.indexContext .desc .aticle h4 {
+    text-align: right;
+    line-height: 0;
+    font-size: 14px;
+}
+
+.indexContext .desc .aticle p {
+    margin-top: 12px;
+    font-size: 12px;
+    line-height: 150%;
+}
+
+.indexContext .aticles {
+    height: 550px;
+    background-color: #eee;
+}
+
+.indexContext .aticles .topic {
+    width: 980px;
+    margin: 0px auto;
+    overflow: hidden;
+}
+
+.indexContext .aticles .topic .aticle {
+    width: 300px;
+    background-color: white;
+    float: left;
+    text-align: center;
+    margin-top: 15px;
+    margin-right: 10px;
+    padding: 10px;
+}
+
+.indexContext .aticles .topic #aticle3 {
+    margin-right: 0;
+}
+
+.indexContext .aticles .topic .aticle img {
+    width: 290px;
+    height: 180px;
+}
+
+.indexContext .aticles .topic .aticle p {
+    font-size: 12px;
+    line-height: 170%;
+    margin: 15px 30px 25px 30px;
+    text-align: left;
+}
+
+.indexContext .myDesc {
+    height: 550px;
+    background-color: white;
+    text-align: center;
+}
+
+.indexContext .myDesc img {
+    width: 160px;
+    height: 160px;
+    margin-top: -50px;
+    border-radius: 80px;
+}
+
+.indexContext .myDesc h3 {
+    font-size: 20px;
+    font-family: "Century Gothic";
+    margin-top: 60px;
+}
+
+.indexContext .myDesc p {
+    font-size: 14px;
+    width: 600px;
+    line-height: 150%;
+    margin: 60px auto;
+    text-align: left;
+}
+
+/* blog.html */
+.blogContext {
+    width: 100%;
+    background-color: #eee;
+    overflow: hidden;
+}
+
+.blogContext .blogMain {
+    width: 980px;
+    margin: 0 auto;
+}
+
+.blogContext .blogAticle {
+    width: 70%;
+    float: left;
+}
+
+.blogContext .blogAticle .myAticle {
+    height: 400px;   
+    background-color: white;
+    padding: 20px;
+    margin-top: 20px;
+    position: relative;
+}
+
+.blogContext .blogAticle .myAticle .leftMark {
+    width: 50px;
+    color: white;
+    font-size: 14px;
+    line-height: 35px;
+    text-align: center;
+    position: absolute;
+    left: -50px;
+    top: 20px;
+}
+
+.blogContext .blogAticle .myAticle .leftMark .date {
+    background-color: #522a5c;
+    height: 35px;
+}
+
+.blogContext .blogAticle .myAticle .leftMark .kind {
+    background-color: #a660b7;
+    height: 35px;
+}
+
+.blogContext .blogAticle .myAticle h3 {
+    line-height: 0;
+    font-size: 16px;
+    color: #a660b7;
+    font-weight: normal;
+}
+
+.blogContext .blogAticle .myAticle h5 {
+    line-height: 0;
+    font-size: 14px;
+    color: #999;
+    font-weight: normal;
+}
+
+.blogContext .blogAticle .myAticle p {
+    font-size: 12px;
+    line-height: 170%;
+}
+
+.blogContext .blogAticle .myAticle .author {
+    font-size: 12px;
+    color: #999;
+    text-align: right;
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+}
+
+.blogContext .blogAticle .page {
+    width: 80%;
+    margin: 20px auto;
+}
+
+.blogContext .blogAticle .page a {
+    display: inline-block;
+    color: black;
+    font-size: 12px;
+    background-color: white;
+    padding: 5px 10px;
+    margin-right: 10px;
+}
+
+.blogContext .blogAticle .page a:hover {
+    background-color: #a660b7;
+    color: white;
+}
+
+.blogContext .blogNav {
+    width: 29%;
+    float: right;
+}
+
+.blogContext .blogNav .search {
+    background-color: white;
+    height: 40px;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+.blogContext .blogNav .search input {
+    height: 35px;
+    width: 85%;
+    float: left;
+    border: 1px solid #eee;
+}
+
+.blogContext .blogNav .search #enter {
+    float: left;
+    height: 37px;
+    line-height: 37px;
+    font-size: 20px;
+    color: white;
+    background-color: #eee;
+    border: 1px solid #eee;
+}
+
+.blogContext .blogNav .kind {
+    background-color: white;
+    margin-top: 20px;
+}
+
+.blogContext .blogNav .kind  a {
+    display: inline-block;
+    color: #999;
+    width: 100%;
+    height: 50px;
+    border-left: 3px solid #a660b7;
+    border-bottom: 1px solid #eee;
+    line-height: 50px;
+}
+
+.blogContext .blogNav .kind  a:hover {
+    border-left: 3px solid #522a5c;
+}
+
+.blogContext .blogNav .dateTime {
+    background-color: white;
+    height: 340px;
+    margin-top: 20px;
+}
+
+.blogContext .blogNav .tags {
+    background-color: white;
+    height: 220px;
+    margin-top: 20px;
 }
